--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -4,8 +4,7 @@
 
 	"nav": {
 		"home": "The Silly's Home",
-		"about": "Who?",
-		"contact": "Contact'em"
+		"contact": "Contact Me"
 	},
 
 	"footer": {
@@ -16,7 +15,10 @@
 		"tagline": "My silly little website!",
 		"message": {
 			"1": "Hello hello! I'm Lumap, a {age} silly guy wandering on the internet all day, waiting for something to eventually happen...",
-			"2": "I absolutely love cats, and especially silly cat gifs! Please send me some {linkStart}here{linkEnd}!"
+			"2": "I absolutely love cats, and especially silly cat gifs! Please send me some {linkStart}here{linkEnd}!",
+			"3": "Wanna know more about me? Sure thing, here's a few things I like:",
+			"3.games": "Video games",
+			"3.wip": "WiP"
 		}
 	}
 }
