--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -4,7 +4,6 @@
 
 	"nav": {
 		"home": "L'accueil",
-		"about": "Qui?",
 		"contact": "Me contacter"
 	},
 
@@ -16,7 +15,10 @@
 		"tagline": "Mon petit site web!",
 		"message": {
 			"1": "Salut salut! Je suis Lumap, un gars idiot agé de {age} ans, se promenant sur internet un peu trop, en attendant que la vie me donne un truc à faire...",
-			"2": "Je suis gaga des chats, mais surtout gaga des gifs marrants de chats! Hésitez pas à m'en envoyer {linkStart}ici{linkEnd}!"
+			"2": "Je suis gaga des chats, mais surtout gaga des gifs marrants de chats! Hésite pas à m'en envoyer {linkStart}ici{linkEnd}!",
+			"3": "Tu veux en savoir plus sur moi? Pas de soucis, voici quelques trucs que j'aime:",
+			"3.games": "Jeux vidéos",
+			"3.wip": "En cours de développement"
 		}
 	}
 }
