finish fav list part 2

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -18,7 +18,7 @@
 			"2": "I absolutely love cats, and especially silly cat gifs! Please send me some {linkStart}here{linkEnd}!",
 			"3": "Wanna know more about me? Sure thing, here's a few things I like:",
 			"3.games": "Video games",
-			"3.wip": "WiP"
+			"3.songs": "Songs"
 		}
 	}
 }
