--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -18,7 +18,7 @@
 			"2": "Je suis gaga des chats, mais surtout gaga des gifs marrants de chats! Hésite pas à m'en envoyer {linkStart}ici{linkEnd}!",
 			"3": "Tu veux en savoir plus sur moi? Pas de soucis, voici quelques trucs que j'aime:",
 			"3.games": "Jeux vidéos",
-			"3.wip": "En cours de développement"
+			"3.songs": "Musiques"
 		}
 	}
 }
